LPA dashboard remove duplicates

--- a/app/views/manage/appeals/search/xgovnav/active.html
+++ b/app/views/manage/appeals/search/xgovnav/active.html
@@ -110,7 +110,7 @@
                     <tr class="govuk-table__row">
                         <th scope="row" class="govuk-table__header">
                             <a class="govuk-link" href="#">
-                                1345301
+                                1009386
                             </a>
                         </th>
                         <td class="govuk-table__cell">The Old Library, 2 Wheeler St, Cambridge CB2 3QB</td>
@@ -124,10 +124,10 @@
                     <tr class="govuk-table__row">
                         <th scope="row" class="govuk-table__header">
                             <a class="govuk-link" href="#">
-                                1345301
+                                10693866
                             </a>
                         </th>
-                        <td class="govuk-table__cell">Spital House, Lensfield Rd, Cambridge CB2 1ER</td>
+                        <td class="govuk-table__cell">Flat 3, 12 Bramblewick Road, Northwick Hollow, Somerset, ZZ1 146</td>
                         <td class="govuk-table__cell">Householder</td>
                         <td class="govuk-table__cell">25 September 2025</td>
                         <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--red">
@@ -138,10 +138,10 @@
                     <tr class="govuk-table__row">
                         <th scope="row" class="govuk-table__header">
                             <a class="govuk-link" href="#">
-                                1345264
+                                1295800
                             </a>
                         </th>
-                        <td class="govuk-table__cell">Haggis Farm Cottage, Cambridge Rd, Barton, Cambridge CB23 7AT</td>
+                        <td class="govuk-table__cell">7 Willowmere Crescent, Oakley Marsh, Kent, ZZ2 2TZ</td>
                         <td class="govuk-table__cell">Planning</td>
                         <td class="govuk-table__cell">29 September 2025</td>
                         <td class="govuk-table__cell">3 days</td>
@@ -150,10 +150,10 @@
                     <tr class="govuk-table__row">
                         <th scope="row" class="govuk-table__header">
                             <a class="govuk-link" href="#">
-                                1345301
+                                1204968
                             </a>
                         </th>
-                        <td class="govuk-table__cell">The Old Library, 2 Wheeler St, Cambridge CB2 3QB</td>
+                        <td class="govuk-table__cell">The Granary, Meadow Lane, Little Wrenford, Norfolk, ZZ3 3ZA</td>
                         <td class="govuk-table__cell">Householder</td>
                         <td class="govuk-table__cell"></td>
                         <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--green">
@@ -164,10 +164,10 @@
                     <tr class="govuk-table__row">
                         <th scope="row" class="govuk-table__header">
                             <a class="govuk-link" href="#">
-                                1345301
+                                20396833
                             </a>
                         </th>
-                        <td class="govuk-table__cell">Spital House, Lensfield Rd, Cambridge CB2 1ER</td>
+                        <td class="govuk-table__cell">18 Redgate Terrace, Puddleby-on-Thames, Oxfordshire, ZZ4 49Q</td>
                         <td class="govuk-table__cell">Householder</td>
                         <td class="govuk-table__cell">25 September 2025</td>
                         <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--red">
@@ -178,10 +178,10 @@
                     <tr class="govuk-table__row">
                         <th scope="row" class="govuk-table__header">
                             <a class="govuk-link" href="#">
-                                1345264
+                                4928166
                             </a>
                         </th>
-                        <td class="govuk-table__cell">Haggis Farm Cottage, Cambridge Rd, Barton, Cambridge CB23 7AT</td>
+                        <td class="govuk-table__cell">Suite 5, 101 Harbourview Buildings, Greenhaven, Cornwall AW3 582</td>
                         <td class="govuk-table__cell">Planning</td>
                         <td class="govuk-table__cell">29 September 2025</td>
                         <td class="govuk-table__cell">3 days</td>
@@ -190,10 +190,10 @@
                     <tr class="govuk-table__row">
                         <th scope="row" class="govuk-table__header">
                             <a class="govuk-link" href="#">
-                                1345301
+                                90294888
                             </a>
                         </th>
-                        <td class="govuk-table__cell">The Old Library, 2 Wheeler St, Cambridge CB2 3QB</td>
+                        <td class="govuk-table__cell">4A Ivy Court, Westbridge Park, Lancashire, A9T 5IG</td>
                         <td class="govuk-table__cell">Householder</td>
                         <td class="govuk-table__cell"></td>
                         <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--green">
@@ -204,10 +204,10 @@
                     <tr class="govuk-table__row">
                         <th scope="row" class="govuk-table__header">
                             <a class="govuk-link" href="#">
-                                1345301
+                                3827652
                             </a>
                         </th>
-                        <td class="govuk-table__cell">Spital House, Lensfield Rd, Cambridge CB2 1ER</td>
+                        <td class="govuk-table__cell">22 Chestnut Avenue, Eldersham, Hertfordshire, SE9 35H</td>
                         <td class="govuk-table__cell">Householder</td>
                         <td class="govuk-table__cell">25 September 2025</td>
                         <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--red">
@@ -218,10 +218,10 @@
                     <tr class="govuk-table__row">
                         <th scope="row" class="govuk-table__header">
                             <a class="govuk-link" href="#">
-                                1345264
+                                8472163
                             </a>
                         </th>
-                        <td class="govuk-table__cell">Haggis Farm Cottage, Cambridge Rd, Barton, Cambridge CB23 7AT</td>
+                        <td class="govuk-table__cell">Rose Cottage, Farrow Lane, Ashfield Cross, Gloucestershire, CB23 792</td>
                         <td class="govuk-table__cell">Planning</td>
                         <td class="govuk-table__cell">29 September 2025</td>
                         <td class="govuk-table__cell">3 days</td>
@@ -230,10 +230,10 @@
                     <tr class="govuk-table__row">
                         <th scope="row" class="govuk-table__header">
                             <a class="govuk-link" href="#">
-                                1345301
+                                2968453
                             </a>
                         </th>
-                        <td class="govuk-table__cell">The Old Library, 2 Wheeler St, Cambridge CB2 3QB</td>
+                        <td class="govuk-table__cell">Unit 9 (North), 3 Mill Wharf, Stoneford, Yorkshire, Z8A Q5TG</td>
                         <td class="govuk-table__cell">Householder</td>
                         <td class="govuk-table__cell"></td>
                         <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--green">
@@ -244,10 +244,10 @@
                     <tr class="govuk-table__row">
                         <th scope="row" class="govuk-table__header">
                             <a class="govuk-link" href="#">
-                                1345301
+                                2950621
                             </a>
                         </th>
-                        <td class="govuk-table__cell">Spital House, Lensfield Rd, Cambridge CB2 1ER</td>
+                        <td class="govuk-table__cell">56 Beacon Hill, Southmarsh, Suffolk, CB2 1ET</td>
                         <td class="govuk-table__cell">Householder</td>
                         <td class="govuk-table__cell">25 September 2025</td>
                         <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--red">
@@ -258,10 +258,10 @@
                     <tr class="govuk-table__row">
                         <th scope="row" class="govuk-table__header">
                             <a class="govuk-link" href="#">
-                                1345264
+                                2948632
                             </a>
                         </th>
-                        <td class="govuk-table__cell">Haggis Farm Cottage, Cambridge Rd, Barton, Cambridge CB23 7AT</td>
+                        <td class="govuk-table__cell">The Old Watchtower, Cliffside Road, Marlowe Point, Hampshire, CB23 7UA</td>
                         <td class="govuk-table__cell">Planning</td>
                         <td class="govuk-table__cell">29 September 2025</td>
                         <td class="govuk-table__cell">3 days</td>
@@ -270,10 +270,10 @@
                     <tr class="govuk-table__row">
                         <th scope="row" class="govuk-table__header">
                             <a class="govuk-link" href="#">
-                                1345301
+                                2948596
                             </a>
                         </th>
-                        <td class="govuk-table__cell">The Old Library, 2 Wheeler St, Cambridge CB2 3QB</td>
+                        <td class="govuk-table__cell">9 Lantern Yard, Copperwell, Derbyshire, CB2 5OA</td>
                         <td class="govuk-table__cell">Householder</td>
                         <td class="govuk-table__cell"></td>
                         <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--green">
