--- a/app/views/manage/appeals/search/xgovnav/decided.html
+++ b/app/views/manage/appeals/search/xgovnav/decided.html
@@ -74,8 +74,8 @@
                     <tr class="govuk-table__row">
                         <th scope="col" class="govuk-table__header">Appeal number</th>
                         <th scope="col" class="govuk-table__header">Address</th>
-                        <th scope="col" class="govuk-table__header">Appeal type</th>
                         <th scope="col" class="govuk-table__header">Decision date</th>
+                        <th scope="col" class="govuk-table__header">Appeal type</th>
                         <th scope="col" class="govuk-table__header">Decision</th>
                     </tr>
                 </thead>
@@ -86,9 +86,74 @@
                                 1345301
                             </a>
                         </th>
-                        <td class="govuk-table__cell">	21A Sarson Way, Wiltshire, BA12 0FF</td>
+                        <td class="govuk-table__cell">67 Peach Avenue, Manchester, WD9 0JT</td>
                         <td class="govuk-table__cell">28 September 2025</td>
-                        <td class="govuk-table__cell">S78</td>
+                        <td class="govuk-table__cell">Householder</td>
+                        <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--orange">
+                            Allowed in part
+                          </strong></td>
+                    </tr>
+                    <tr class="govuk-table__row">
+                        <th scope="row" class="govuk-table__header">
+                            <a class="govuk-link" href="#">
+                                3948596
+                            </a>
+                        </th>
+                        <td class="govuk-table__cell">92 Papaw Road, London, WD6 9QW</td>
+                        <td class="govuk-table__cell">28 September 2025</td>
+                        <td class="govuk-table__cell">Planning</td>
+                        <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--grey">
+                            Invalid
+                          </strong></td>
+                    </tr>
+                    <tr class="govuk-table__row">
+                        <th scope="row" class="govuk-table__header">
+                            <a class="govuk-link" href="#">
+                                9583953
+                            </a>
+                        </th>
+                        <td class="govuk-table__cell">18 Cumquat Road, Birmingham, WD7 5JT</td>
+                        <td class="govuk-table__cell">28 September 2025</td>
+                        <td class="govuk-table__cell">Householder</td>
+                        <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--green">
+                            Allowed
+                          </strong></td>
+                    </tr>
+                    <tr class="govuk-table__row">
+                        <th scope="row" class="govuk-table__header">
+                            <a class="govuk-link" href="#">
+                                2839586
+                            </a>
+                        </th>
+                        <td class="govuk-table__cell">15 Blueberry Walk, London, WD8 0AL</td>
+                        <td class="govuk-table__cell">28 September 2025</td>
+                        <td class="govuk-table__cell">Householder</td>
+                        <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--yellow">
+                            Dismissed
+                          </strong></td>
+                    </tr>
+                    <tr class="govuk-table__row">
+                        <th scope="row" class="govuk-table__header">
+                            <a class="govuk-link" href="#">
+                                2938573
+                            </a>
+                        </th>
+                        <td class="govuk-table__cell">86 Butternut pumpkin Walk, Manchester, WD5 8DH</td>
+                        <td class="govuk-table__cell">28 September 2025</td>
+                        <td class="govuk-table__cell">Planning</td>
+                        <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--green">
+                            Allowed
+                          </strong></td>
+                    </tr>
+                    <tr class="govuk-table__row">
+                        <th scope="row" class="govuk-table__header">
+                            <a class="govuk-link" href="#">
+                                1928374
+                            </a>
+                        </th>
+                        <td class="govuk-table__cell">48 Longan Lane, Birmingham, WD1 1OF</td>
+                        <td class="govuk-table__cell">28 September 2025</td>
+                        <td class="govuk-table__cell">Planning</td>
                         <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--orange">
                             Allowed in part
                           </strong></td>
@@ -99,9 +164,9 @@
                                 1345301
                             </a>
                         </th>
-                        <td class="govuk-table__cell">	21A Sarson Way, Wiltshire, BA12 0FF</td>
+                        <td class="govuk-table__cell">56 Plum Walk, London, WD4 9TG</td>
                         <td class="govuk-table__cell">28 September 2025</td>
-                        <td class="govuk-table__cell">S78</td>
+                        <td class="govuk-table__cell">Householder</td>
                         <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--grey">
                             Invalid
                           </strong></td>
@@ -109,12 +174,12 @@
                     <tr class="govuk-table__row">
                         <th scope="row" class="govuk-table__header">
                             <a class="govuk-link" href="#">
-                                1345301
+                                2938501
                             </a>
                         </th>
-                        <td class="govuk-table__cell">	21A Sarson Way, Wiltshire, BA12 0FF</td>
+                        <td class="govuk-table__cell">69 Lime Walk, Manchester, WD3 984Y</td>
                         <td class="govuk-table__cell">28 September 2025</td>
-                        <td class="govuk-table__cell">S78</td>
+                        <td class="govuk-table__cell">Planning</td>
                         <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--green">
                             Allowed
                           </strong></td>
@@ -122,12 +187,12 @@
                     <tr class="govuk-table__row">
                         <th scope="row" class="govuk-table__header">
                             <a class="govuk-link" href="#">
-                                1345301
+                                7385521
                             </a>
                         </th>
-                        <td class="govuk-table__cell">	21A Sarson Way, Wiltshire, BA12 0FF</td>
+                        <td class="govuk-table__cell">35 Incaberry Avenue, Manchester, WD5 24T</td>
                         <td class="govuk-table__cell">28 September 2025</td>
-                        <td class="govuk-table__cell">S78</td>
+                        <td class="govuk-table__cell">Planning</td>
                         <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--yellow">
                             Dismissed
                           </strong></td>
@@ -135,12 +200,12 @@
                     <tr class="govuk-table__row">
                         <th scope="row" class="govuk-table__header">
                             <a class="govuk-link" href="#">
-                                1345301
+                                8900023
                             </a>
                         </th>
-                        <td class="govuk-table__cell">	21A Sarson Way, Wiltshire, BA12 0FF</td>
+                        <td class="govuk-table__cell">79 Loquat Walk, London, WD2 1ID</td>
                         <td class="govuk-table__cell">28 September 2025</td>
-                        <td class="govuk-table__cell">S78</td>
+                        <td class="govuk-table__cell">Planning</td>
                         <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--green">
                             Allowed
                           </strong></td>
@@ -148,12 +213,12 @@
                     <tr class="govuk-table__row">
                         <th scope="row" class="govuk-table__header">
                             <a class="govuk-link" href="#">
-                                1345301
+                                9203944
                             </a>
                         </th>
-                        <td class="govuk-table__cell">	21A Sarson Way, Wiltshire, BA12 0FF</td>
+                        <td class="govuk-table__cell">77 Papaw Walk, Bristol, WD6 Q9D</td>
                         <td class="govuk-table__cell">28 September 2025</td>
-                        <td class="govuk-table__cell">S78</td>
+                        <td class="govuk-table__cell">Planning</td>
                         <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--orange">
                             Allowed in part
                           </strong></td>
@@ -161,12 +226,12 @@
                     <tr class="govuk-table__row">
                         <th scope="row" class="govuk-table__header">
                             <a class="govuk-link" href="#">
-                                1345301
+                                1928394
                             </a>
                         </th>
-                        <td class="govuk-table__cell">	21A Sarson Way, Wiltshire, BA12 0FF</td>
+                        <td class="govuk-table__cell">40 Honeydew melon Avenue, Bristol, WD1 50W</td>
                         <td class="govuk-table__cell">28 September 2025</td>
-                        <td class="govuk-table__cell">S78</td>
+                        <td class="govuk-table__cell">Planning</td>
                         <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--grey">
                             Invalid
                           </strong></td>
@@ -174,12 +239,12 @@
                     <tr class="govuk-table__row">
                         <th scope="row" class="govuk-table__header">
                             <a class="govuk-link" href="#">
-                                1345301
+                                5493566
                             </a>
                         </th>
-                        <td class="govuk-table__cell">	21A Sarson Way, Wiltshire, BA12 0FF</td>
+                        <td class="govuk-table__cell">93 Papaya Avenue, Birmingham, WD2 2JP</td>
                         <td class="govuk-table__cell">28 September 2025</td>
-                        <td class="govuk-table__cell">S78</td>
+                        <td class="govuk-table__cell">Planning</td>
                         <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--green">
                             Allowed
                           </strong></td>
@@ -187,12 +252,12 @@
                     <tr class="govuk-table__row">
                         <th scope="row" class="govuk-table__header">
                             <a class="govuk-link" href="#">
-                                1345301
+                                2938589
                             </a>
                         </th>
-                        <td class="govuk-table__cell">	21A Sarson Way, Wiltshire, BA12 0FF</td>
+                        <td class="govuk-table__cell">76 Jarrahdale pumpkin Lane, Bristol, WD7 57T</td>
                         <td class="govuk-table__cell">28 September 2025</td>
-                        <td class="govuk-table__cell">S78</td>
+                        <td class="govuk-table__cell">Planning</td>
                         <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--yellow">
                             Dismissed
                           </strong></td>
@@ -200,77 +265,12 @@
                     <tr class="govuk-table__row">
                         <th scope="row" class="govuk-table__header">
                             <a class="govuk-link" href="#">
-                                1345301
+                                1092845
                             </a>
                         </th>
-                        <td class="govuk-table__cell">	21A Sarson Way, Wiltshire, BA12 0FF</td>
+                        <td class="govuk-table__cell">39 Sprout Road, Bristol, WD7 1JP</td>
                         <td class="govuk-table__cell">28 September 2025</td>
-                        <td class="govuk-table__cell">S78</td>
-                        <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--green">
-                            Allowed
-                          </strong></td>
-                    </tr>
-                    <tr class="govuk-table__row">
-                        <th scope="row" class="govuk-table__header">
-                            <a class="govuk-link" href="#">
-                                1345301
-                            </a>
-                        </th>
-                        <td class="govuk-table__cell">	21A Sarson Way, Wiltshire, BA12 0FF</td>
-                        <td class="govuk-table__cell">28 September 2025</td>
-                        <td class="govuk-table__cell">S78</td>
-                        <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--orange">
-                            Allowed in part
-                          </strong></td>
-                    </tr>
-                    <tr class="govuk-table__row">
-                        <th scope="row" class="govuk-table__header">
-                            <a class="govuk-link" href="#">
-                                1345301
-                            </a>
-                        </th>
-                        <td class="govuk-table__cell">	21A Sarson Way, Wiltshire, BA12 0FF</td>
-                        <td class="govuk-table__cell">28 September 2025</td>
-                        <td class="govuk-table__cell">S78</td>
-                        <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--grey">
-                            Invalid
-                          </strong></td>
-                    </tr>
-                    <tr class="govuk-table__row">
-                        <th scope="row" class="govuk-table__header">
-                            <a class="govuk-link" href="#">
-                                1345301
-                            </a>
-                        </th>
-                        <td class="govuk-table__cell">	21A Sarson Way, Wiltshire, BA12 0FF</td>
-                        <td class="govuk-table__cell">28 September 2025</td>
-                        <td class="govuk-table__cell">S78</td>
-                        <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--green">
-                            Allowed
-                          </strong></td>
-                    </tr>
-                    <tr class="govuk-table__row">
-                        <th scope="row" class="govuk-table__header">
-                            <a class="govuk-link" href="#">
-                                1345301
-                            </a>
-                        </th>
-                        <td class="govuk-table__cell">	21A Sarson Way, Wiltshire, BA12 0FF</td>
-                        <td class="govuk-table__cell">28 September 2025</td>
-                        <td class="govuk-table__cell">S78</td>
-                        <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--yellow">
-                            Dismissed
-                          </strong></td>
-                    </tr>
-                    <tr class="govuk-table__row">
-                        <th scope="row" class="govuk-table__header">
-                            <a class="govuk-link" href="#">
-                                1345301
-                            </a>
-                        </th>
-                        <td class="govuk-table__cell">	21A Sarson Way, Wiltshire, BA12 0FF</td>
-                        <td class="govuk-table__cell">28 September 2025</td>
-                        <td class="govuk-table__cell">S78</td>
+                        <td class="govuk-table__cell">Planning</td>
                         <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--green">
                             Allowed
                           </strong></td>
