--- a/app/views/manage/appeals/search/xgovnav/waiting-for-review.html
+++ b/app/views/manage/appeals/search/xgovnav/waiting-for-review.html
@@ -83,11 +83,11 @@
                     <tr class="govuk-table__row">
                         <th scope="row" class="govuk-table__header">
                             <a class="govuk-link" href="#">
-                                1345301
+                                9502985
                             </a>
                         </th>
                         <td class="govuk-table__cell">Shelford Bottom, Heath Farm, Babraham Rd, Stapleford, Cambridge CB22 3AD</td>
-                        <td class="govuk-table__cell">S78</td>
+                        <td class="govuk-table__cell">Planning</td>
                         <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--blue">
                             With case officer
                           </strong></td>
@@ -95,11 +95,11 @@
                     <tr class="govuk-table__row">
                         <th scope="row" class="govuk-table__header">
                             <a class="govuk-link" href="#">
-                                1345301
+                                1849586
                             </a>
                         </th>
-                        <td class="govuk-table__cell">Shelford Bottom, Heath Farm, Babraham Rd, Stapleford, Cambridge CB22 3AD</td>
-                        <td class="govuk-table__cell">S78</td>
+                        <td class="govuk-table__cell">19 Fig Walk, Birmingham, WD2 9JT</td>
+                        <td class="govuk-table__cell">Householder</td>
                         <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--blue">
                             With case officer
                           </strong></td>
@@ -107,11 +107,11 @@
                     <tr class="govuk-table__row">
                         <th scope="row" class="govuk-table__header">
                             <a class="govuk-link" href="#">
-                                1345301
+                                1350296
                             </a>
                         </th>
-                        <td class="govuk-table__cell">Shelford Bottom, Heath Farm, Babraham Rd, Stapleford, Cambridge CB22 3AD</td>
-                        <td class="govuk-table__cell">S78</td>
+                        <td class="govuk-table__cell">9 Kiwiberry Walk, Bristol, WD4 8JT</td>
+                        <td class="govuk-table__cell">Householder</td>
                         <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--blue">
                             With case officer
                           </strong></td>
@@ -119,11 +119,11 @@
                     <tr class="govuk-table__row">
                         <th scope="row" class="govuk-table__header">
                             <a class="govuk-link" href="#">
-                                1345301
+                                8395566
                             </a>
                         </th>
-                        <td class="govuk-table__cell">Shelford Bottom, Heath Farm, Babraham Rd, Stapleford, Cambridge CB22 3AD</td>
-                        <td class="govuk-table__cell">S78</td>
+                        <td class="govuk-table__cell">1 Melon Lane, Manchester, WD1 4JT</td>
+                        <td class="govuk-table__cell">Planning</td>
                         <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--blue">
                             With case officer
                           </strong></td>
@@ -131,11 +131,11 @@
                     <tr class="govuk-table__row">
                         <th scope="row" class="govuk-table__header">
                             <a class="govuk-link" href="#">
-                                1345301
+                                20596642
                             </a>
                         </th>
-                        <td class="govuk-table__cell">Shelford Bottom, Heath Farm, Babraham Rd, Stapleford, Cambridge CB22 3AD</td>
-                        <td class="govuk-table__cell">S78</td>
+                        <td class="govuk-table__cell">70 Tangelo Walk, London, WD3 9JT</td>
+                        <td class="govuk-table__cell">Planning</td>
                         <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--blue">
                             With case officer
                           </strong></td>
@@ -143,11 +143,11 @@
                     <tr class="govuk-table__row">
                         <th scope="row" class="govuk-table__header">
                             <a class="govuk-link" href="#">
-                                1345301
+                                29385799
                             </a>
                         </th>
-                        <td class="govuk-table__cell">Shelford Bottom, Heath Farm, Babraham Rd, Stapleford, Cambridge CB22 3AD</td>
-                        <td class="govuk-table__cell">S78</td>
+                        <td class="govuk-table__cell">75 Fingerlime Lane, Birmingham, WD2 3JT</td>
+                        <td class="govuk-table__cell">Planning</td>
                         <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--blue">
                             With case officer
                           </strong></td>
@@ -155,11 +155,11 @@
                     <tr class="govuk-table__row">
                         <th scope="row" class="govuk-table__header">
                             <a class="govuk-link" href="#">
-                                1345301
+                                1958327
                             </a>
                         </th>
-                        <td class="govuk-table__cell">Shelford Bottom, Heath Farm, Babraham Rd, Stapleford, Cambridge CB22 3AD</td>
-                        <td class="govuk-table__cell">S78</td>
+                        <td class="govuk-table__cell">41 Juniper berry Walk, Birmingham, WD4 3JT</td>
+                        <td class="govuk-table__cell">Planning</td>
                         <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--blue">
                             With case officer
                           </strong></td>
@@ -167,11 +167,11 @@
                     <tr class="govuk-table__row">
                         <th scope="row" class="govuk-table__header">
                             <a class="govuk-link" href="#">
-                                1345301
+                                2819586
                             </a>
                         </th>
-                        <td class="govuk-table__cell">Shelford Bottom, Heath Farm, Babraham Rd, Stapleford, Cambridge CB22 3AD</td>
-                        <td class="govuk-table__cell">S78</td>
+                        <td class="govuk-table__cell">29 Pear Avenue, London, WD5 5JT</td>
+                        <td class="govuk-table__cell">Planning</td>
                         <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--blue">
                             With case officer
                           </strong></td>
