--- a/app/views/manage/appeals/search/xgovnav/withdrawn.html
+++ b/app/views/manage/appeals/search/xgovnav/withdrawn.html
@@ -85,9 +85,9 @@
                                 1345301
                             </a>
                         </th>
-                        <td class="govuk-table__cell">	21A Sarson Way, Wiltshire, BA12 0FF</td>
+                        <td class="govuk-table__cell">25 Pear Avenue, Birmingham, WD3 0JT</td>
                         <td class="govuk-table__cell">28 September 2025</td>
-                        <td class="govuk-table__cell">S78</td>
+                        <td class="govuk-table__cell">Planning</td>
                     </tr>
                 </tbody>
             </table>
