document type tag

--- a/app/views/manage/appeals/search/xgovnav/active-search-applied.html
+++ b/app/views/manage/appeals/search/xgovnav/active-search-applied.html
@@ -28,7 +28,7 @@
 
         <form class="govuk-form-group" style="display: flex; gap: 8px; align-items: center; margin-bottom: 0px;">
             <label class="govuk-label govuk-visually-hidden" for="keyword-search">Keyword search</label>
-            <input class="govuk-input" id="keyword-search" name="keyword-search" type="text" autocomplete="off" style="margin-bottom: 0; width:100%;" value="Cambridge">
+            <input class="govuk-input" id="keyword-search" name="keyword-search" type="text" autocomplete="off" style="margin-bottom: 0; width:100%;" value="1345301">
             <button class="govuk-button" id="keyword-search-button" type="submit" style="margin-bottom: 0;" value="Cambridge">Search</button>
             
         </form>
@@ -48,7 +48,7 @@
             {{ xGovukSecondaryNavigation({
                 visuallyHiddenTitle: "Secondary menu",
                 items: [{
-                text: "Active (2)",
+                text: "Active (1)",
                 href: "active-search-applied",
                 current: true
                 }, {
@@ -90,18 +90,6 @@
                         <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--red">
                             Overdue
                           </strong></td>
-                          <td class="govuk-table__cell"><a href="#">Questionnaire</a><br><a href="#">Statement</a><br></td>
-                    </tr>
-                    <tr class="govuk-table__row">
-                        <th scope="row" class="govuk-table__header">
-                            <a class="govuk-link" href="#">
-                                1345264
-                            </a>
-                        </th>
-                        <td class="govuk-table__cell">Haggis Farm Cottage, Cambridge Rd, Barton, Cambridge CB23 7AT</td>
-                        <td class="govuk-table__cell">Planning</td>
-                        <td class="govuk-table__cell">29 September 2025</td>
-                        <td class="govuk-table__cell">3 days</td>
                           <td class="govuk-table__cell"><a href="#">Questionnaire</a><br><a href="#">Statement</a><br></td>
                     </tr>
                     
