--- a/app/views/manage/appeals/search/xgovnav/wfr-search-applied.html
+++ b/app/views/manage/appeals/search/xgovnav/wfr-search-applied.html
@@ -29,7 +29,7 @@
         <form class="govuk-form-group" style="display: flex; gap: 8px; align-items: center; margin-bottom: 0px;">
             <label class="govuk-label govuk-visually-hidden" for="keyword-search">Keyword search</label>
             <input class="govuk-input" id="keyword-search" name="keyword-search" type="text" autocomplete="off"
-                style="margin-bottom: 0; width:100%;" value="Cambridge">
+                style="margin-bottom: 0; width:100%;" value="1345301">
             <button class="govuk-button" id="keyword-search-button" type="submit" style="margin-bottom: 0;"
                 value="Cambridge">Search</button>
 
