--- a/app/views/appeal/enforcement/v3/prepare-appeal/grounds.html
+++ b/app/views/appeal/enforcement/v3/prepare-appeal/grounds.html
@@ -77,7 +77,7 @@
           Ground (f)
         </label>
         <div class="govuk-hint govuk-checkboxes__hint">
-          The actions or steps in the notice are excessive.
+          You are suggesting steps that are easier to carry out, but still meet the purpose of the enforcement notice. The notice aims to fix the planning breach or reduce its impact on the local area.
         </div>
       </div>
 
